--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "compilerOptions": {
-    "lib": ["ES2019", "DOM"],
+    "lib": [
+      "ES2019",
+      "DOM"
+    ],
     "outDir": "./dist/",
     "sourceMap": true,
     "module": "esnext",
@@ -13,16 +16,24 @@
     "noUnusedLocals": true,
     "noImplicitAny": true,
     "baseUrl": ".",
-    "jsx": "react",
-    "typeRoots": ["node_modules/@types/", "typings"],
+    "jsx": "react-jsx",
+    "typeRoots": [
+      "node_modules/@types/",
+      "typings"
+    ],
     "esModuleInterop": true,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "noEmit": true
+    "noEmit": true,
+    "noFallthroughCasesInSwitch": true
   },
-  "exclude": ["api-mocks"],
-  "include": ["src"]
+  "exclude": [
+    "api-mocks"
+  ],
+  "include": [
+    "src"
+  ]
 }
