--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
     "@types/react": "^17.0.30",
     "@types/react-router": "^5.1.17",
     "eslint-plugin-react": "^7.19.0",
@@ -21,6 +23,7 @@
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^4.0.3",
+    "react-test-renderer": "^17.0.2",
     "swr": "^0.3.0",
     "timeago.js": "^4.0.2",
     "typescript": "^4.4.4"
@@ -52,10 +55,12 @@
   },
   "devDependencies": {
     "@chakra-ui/react": "^1.6.10",
+    "@types/jest": "^27.0.2",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
-    "eslint-config-prettier": "^8.3.0"
+    "eslint-config-prettier": "^8.3.0",
+    "jest": "^26.6.0"
   },
   "resolutions": {
     "**/@typescript-eslint/eslint-plugin": "^4.1.1",
