--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   ],
   "license": "MIT",
   "private": true,
+  "homepage": "https://reverbePrintemps.github.io/jandreo-space-rockets",
   "dependencies": {
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
@@ -23,7 +24,6 @@
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^4.0.3",
-    "react-test-renderer": "^17.0.2",
     "swr": "^0.3.0",
     "timeago.js": "^4.0.2",
     "typescript": "^4.4.4"
@@ -31,6 +31,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "lint": "eslint . --ext .ts"
   },
@@ -60,6 +62,7 @@
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "eslint-config-prettier": "^8.3.0",
+    "gh-pages": "^3.2.3",
     "jest": "^26.6.0"
   },
   "resolutions": {
