--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pleo-space-rockets-app",
+  "name": "jandreo-space-rockets",
   "version": "1.0.0",
   "contributors": [
     "Maciek Pekala <maciek@pleo.io>",
